--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name:               RSA-Toolkit
-version:            0.01
+version:            0.02
 abstract:           Perl extension for RSA Administration Toolkit
 author:
-    - Super-User <root@>
-license:            unknown
+    - Pan Yu <xiaocong[at]vip.163.com>
+license:            Perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
